--- a/resources/interface/default.css
+++ b/resources/interface/default.css
@@ -80,7 +80,7 @@ note { background: yellow; color: black }
 #worlds > td:checked { background: linear-gradient(to bottom, #87cb85, #6da46b); border: 2px solid #94df92 }
 #worlds #wname { color: white }
 #worlds td { color: #aaa; text-shadow: 2px 2px rgba(#000,0.5) }
-#worlds td:checked { color: #eee }
+#worlds td:checked { color: #fff }
 
 #toolbar { background: rgba(black,0.7); padding: 10px; box-shadow: 0 0 10px black; font-size: 0.9em }
 
