--- a/doc/default.css
+++ b/doc/default.css
@@ -53,7 +53,8 @@ ul, ol		{ margin-left: 40px }
 li			{ margin-bottom: 15px }
 dim			{ color: rgba(0,0,0,0.3) }
 .key		{ background-color: #ddd; font-family: monospace; padding: 0px 3px; border-radius: 5px; border: 1px outset #860 }
-.image img	{ margin: 0 auto }
+.photo img,
+.image img	{ margin: 0 auto; display: block }
 cap			{ font-size: 0.9em }
 .image > div,
 .image img	{ margin-left: 0 10px; display: block; box-shadow: #555 0 0 5px; border: 2px solid black }
