chunk corruption while saving fixed

--- a/doc/default.css
+++ b/doc/default.css
@@ -97,6 +97,7 @@ bitpart.sz1		{ width: 15px }
 bitpart.sz2		{ width: 30px }
 bitpart.sz3		{ width: 45px }
 bitpart.sz4		{ width: 60px }
+bitpart.sz5		{ width: 75px }
 bitpart.sz7		{ width: 105px }
 bitpart.sz8		{ width: 120px }
 bitpart.sz9		{ width: 135px }
