added greedy meshing

--- a/doc/default.css
+++ b/doc/default.css
@@ -103,6 +103,7 @@ bitpart.sz8		{ width: 120px }
 bitpart.sz9		{ width: 135px }
 bitpart.sz10	{ width: 150px }
 bitpart.sz12	{ width: 180px }
+bitpart.sz13	{ width: 195px }
 bitpart.sz14	{ width: 210px }
 bitpart.sz16	{ width: 240px }
 bitpart.sz32    { width: 480px }
